Fix vertical alignment of log item icon

--- a/css/content/list/item.css
+++ b/css/content/list/item.css
@@ -16,6 +16,9 @@
   width: 26px;
   padding-left: 10px;
   font-size: 16px;
+  display: flex;
+  align-items: center;
+  height: inherit;
 }
 
 #LoggerApp div.log-list-wrapper .icon img {
